--- a/composer.json
+++ b/composer.json
@@ -12,9 +12,9 @@
     ],
     "require": {
         "php": "^7.4||^8.0",
-        "illuminate/support": "^6.0|^7.0|^8.0",
-        "illuminate/queue": "^6.0|^7.0|^8.0",
-        "illuminate/database": "^6.0|^7.0|^8.0"
+        "illuminate/support": "^7.0|^8.0",
+        "illuminate/queue": "^7.0|^8.0",
+        "illuminate/database": "^7.0|^8.0"
     },
     "require-dev": {
         "orchestra/testbench": "^6.17"
