--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
         "illuminate/database": "^7.0|^8.0"
     },
     "require-dev": {
-        "orchestra/testbench": "^6.17"
+        "orchestra/testbench": "^5.0|^6.0"
     },
     "autoload": {
         "psr-4": {
