--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -8,7 +8,7 @@ jobs:
 
     strategy:
       matrix:
-        php: [7.3, 7.4, 8.0]
+        php: [7.4, 8.0]
         laravel: [8.*, 7.*, 6.*]
         dependency-version: [prefer-stable, prefer-lowest]
         include:
