--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -9,7 +9,7 @@ jobs:
     strategy:
       matrix:
         php: [7.4, 8.0]
-        laravel: [8.*, 7.*, 6.*]
+        laravel: [8.*, 7.*]
         dependency-version: [prefer-stable, prefer-lowest]
         include:
           - laravel: 8.*
