--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
         }
     ],
     "require": {
-        "php": "^7.4||^8.0",
+        "php": "^7.4|^8.0",
         "illuminate/support": "^7.0|^8.0",
         "illuminate/queue": "^7.0|^8.0",
         "illuminate/database": "^7.0|^8.0"
