--- a/.editorconfig
+++ b/.editorconfig
@@ -727,7 +727,7 @@ ij_php_space_after_colon_in_return_type = true
 ij_php_space_after_comma = true
 ij_php_space_after_for_semicolon = true
 ij_php_space_after_quest = true
-ij_php_space_after_type_cast = false
+ij_php_space_after_type_cast = true
 ij_php_space_after_unary_not = false
 ij_php_space_before_array_initializer_left_brace = false
 ij_php_space_before_catch_keyword = true
