--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,8 @@
     "require-dev": {
         "orchestra/testbench": "^5.0|^6.0",
         "phpunit/phpunit": "^8.0|^9.0",
-        "spatie/test-time": "^1.2"
+        "spatie/test-time": "^1.2",
+        "friendsofphp/php-cs-fixer": "^3.2"
     },
     "autoload": {
         "psr-4": {
