--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -8,14 +8,12 @@ jobs:
 
     strategy:
       matrix:
-        php: [7.4]
-        laravel: [8.*, 7.*]
+        php: [7.4, 8.0]
+        laravel: [8.*]
         dependency-version: [prefer-stable, prefer-lowest]
         include:
           - laravel: 8.*
-            testbench: 6.*
-          - laravel: 7.*
-            testbench: 5.*
+            testbench: 6.23
 
     name: CI - PHP ${{ matrix.php }}  - Laravel ${{ matrix.laravel }} - Testbench ${{ matrix.testbench }} (${{ matrix.dependency-version }})
 
@@ -23,12 +21,6 @@ jobs:
 
     - name: Checkout
       uses: actions/checkout@v2
-
-    - name: Cache dependencies
-      uses: actions/cache@v1
-      with:
-        path: ~/.composer/cache/files
-        key: dependencies-php-${{ matrix.php }}-composer-${{ hashFiles('composer.json') }}
 
     - name: Setup PHP
       uses: shivammathur/setup-php@v2
