--- a/composer.json
+++ b/composer.json
@@ -12,19 +12,20 @@
     ],
     "require": {
         "php": "^7.4||^8.0",
-        "illuminate/support": "^7.0|^8.0",
-        "illuminate/queue": "^7.0|^8.0",
-        "illuminate/database": "^7.0|^8.0"
+        "illuminate/support": "^8.0",
+        "illuminate/queue": "^8.0",
+        "illuminate/database": "^8.0"
     },
     "require-dev": {
-        "orchestra/testbench": "^5.0|^6.0",
-        "phpunit/phpunit": "^8.0|^9.0",
+        "orchestra/testbench": "^6.0",
+        "phpunit/phpunit": "^9.5",
         "spatie/test-time": "^1.2",
         "friendsofphp/php-cs-fixer": "^3.2"
     },
     "autoload": {
         "psr-4": {
-            "Junges\\TrackableJobs\\": "src/"
+            "Junges\\TrackableJobs\\": "src/",
+            "Database\\Factories\\": "database/factories/"
         }
     },
     "autoload-dev": {
