--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -9,11 +9,16 @@ jobs:
     strategy:
       matrix:
         php: [7.4, 8.0]
-        laravel: [8.*]
+        laravel: [8.*, 9.*]
         dependency-version: [prefer-stable, prefer-lowest]
         include:
           - laravel: 8.*
             testbench: 6.23
+          - laravel: 9.*
+            testbench: ^7.0
+        exclude:
+          - laravel: 9.*
+            php: 7.4
 
     name: CI - PHP ${{ matrix.php }}  - Laravel ${{ matrix.laravel }} - Testbench ${{ matrix.testbench }} (${{ matrix.dependency-version }})
 
