--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
         "php": "^7.4||^8.0",
         "illuminate/support": "^8.0 || ^9.0",
         "illuminate/queue": "^8.0 || ^9.0",
-        "illuminate/database": "^8.0 || ^9.0"
+        "illuminate/database": "^8.0 || ^9.0",
+        "doctrine/dbal": "^3.3"
     },
     "require-dev": {
         "orchestra/testbench": "^6.0 || ^7.0",
