--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -8,15 +8,21 @@ jobs:
 
     strategy:
       matrix:
-        php: [7.4, 8.0]
-        laravel: [8.*, 9.*]
+        php: [7.4, 8.0, 8.1]
+        laravel: [8.*, 9.*, 10.*]
         dependency-version: [prefer-stable, prefer-lowest]
         include:
+          - laravel: 10.*
+            testbench: 8.0
           - laravel: 8.*
             testbench: 6.23
           - laravel: 9.*
             testbench: ^7.0
         exclude:
+          - laravel: 10.*
+            php: 7.4
+          - laravel: 10.*
+            php: 8.0
           - laravel: 9.*
             php: 7.4
 
