--- a/composer.json
+++ b/composer.json
@@ -12,12 +12,12 @@
     ],
     "require": {
         "php": "^7.4||^8.0",
-        "illuminate/support": "^8.0 || ^9.0",
-        "illuminate/queue": "^8.0 || ^9.0",
-        "illuminate/database": "^8.0 || ^9.0"
+        "illuminate/support": "^8.0 || ^9.0|^10.0",
+        "illuminate/queue": "^8.0 || ^9.0|^10.0",
+        "illuminate/database": "^8.0 || ^9.0|^10.0"
     },
     "require-dev": {
-        "orchestra/testbench": "^6.0 || ^7.0",
+        "orchestra/testbench": "^6.0 || ^7.0|^8.0",
         "phpunit/phpunit": "^9.5",
         "spatie/test-time": "^1.2",
         "friendsofphp/php-cs-fixer": "^3.2"
@@ -33,6 +33,7 @@
             "Junges\\TrackableJobs\\Tests\\": "tests/"
         }
     },
+    "minimum-stability": "dev",
     "extra": {
         "laravel": {
             "providers": [
