--- a/composer.json
+++ b/composer.json
@@ -11,10 +11,10 @@
         }
     ],
     "require": {
-        "php": "^8.0",
-        "illuminate/support": "^9.0|^10.0",
-        "illuminate/queue": "^9.0|^10.0",
-        "illuminate/database": "^9.0|^10.0"
+        "php": "^8.1|^8.2",
+        "illuminate/support": "^10.0",
+        "illuminate/queue": "^10.0",
+        "illuminate/database": "^10.0"
     },
     "require-dev": {
         "orchestra/testbench": "^7.0|^8.0",
