--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,8 @@
         "orchestra/testbench": "^7.0|^8.0",
         "phpunit/phpunit": "^9.5",
         "spatie/test-time": "^1.2",
-        "friendsofphp/php-cs-fixer": "^3.2"
+        "friendsofphp/php-cs-fixer": "^3.2",
+        "doctrine/dbal": "^3.6"
     },
     "autoload": {
         "psr-4": {
