--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -8,14 +8,12 @@ jobs:
 
     strategy:
       matrix:
-        php: [8.0, 8.1]
-        laravel: [9.*, 10.*]
+        php: [8.2]
+        laravel: [10.*]
         dependency-version: [prefer-stable, prefer-lowest]
         include:
           - laravel: 10.*
             testbench: ^8.0
-          - laravel: 9.*
-            testbench: ^7.0
         exclude:
           - laravel: 10.*
             php: 8.0
