--- a/composer.json
+++ b/composer.json
@@ -12,12 +12,12 @@
     ],
     "require": {
         "php": "^8.2",
-        "illuminate/support": "^9.0|^10.0",
-        "illuminate/queue": "^9.0|^10.0",
-        "illuminate/database": "^9.0|^10.0"
+        "illuminate/support": "^10.0",
+        "illuminate/queue": "^10.0",
+        "illuminate/database": "^10.0"
     },
     "require-dev": {
-        "orchestra/testbench": "^7.0|^8.0",
+        "orchestra/testbench": "^8.0",
         "phpunit/phpunit": "^9.5",
         "spatie/test-time": "^1.2",
         "friendsofphp/php-cs-fixer": "^3.2"
