Update GitHub Actions for Laravel 11

--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -1,6 +1,8 @@
 name: Continuous Integration
 
-on: ['push', 'pull_request']
+on:
+  - push
+  - pull_request
 
 jobs:
   ci:
@@ -9,11 +11,13 @@ jobs:
     strategy:
       matrix:
         php: [8.2]
-        laravel: [10.*]
+        laravel: ['10.*', '11.*']
         dependency-version: [prefer-stable, prefer-lowest]
         include:
           - laravel: 10.*
             testbench: ^8.0
+          - laravel: 11.*
+            testbench: ^9.0
         exclude:
           - laravel: 10.*
             php: 8.0
@@ -21,22 +25,21 @@ jobs:
     name: CI - PHP ${{ matrix.php }}  - Laravel ${{ matrix.laravel }} - Testbench ${{ matrix.testbench }} (${{ matrix.dependency-version }})
 
     steps:
+      - name: Checkout
+        uses: actions/checkout@v2
 
-    - name: Checkout
-      uses: actions/checkout@v2
+      - name: Setup PHP
+        uses: shivammathur/setup-php@v2
+        with:
+          php-version: ${{ matrix.php }}
+          extensions: mbstring, zip
+          tools: prestissimo
+          coverage: pcov
 
-    - name: Setup PHP
-      uses: shivammathur/setup-php@v2
-      with:
-        php-version: ${{ matrix.php }}
-        extensions: mbstring, zip
-        tools: prestissimo
-        coverage: pcov
+      - name: Install Composer dependencies
+        run: |
+          composer require "laravel/framework:${{ matrix.laravel }}" "orchestra/testbench:${{ matrix.testbench }}" --no-interaction --no-update
+          composer update --${{ matrix.dependency-version }} --no-interaction --prefer-dist --no-suggest
 
-    - name: Install Composer dependencies
-      run: |
-        composer require "laravel/framework:${{ matrix.laravel }}" "orchestra/testbench:${{ matrix.testbench }}" --no-interaction --no-update
-        composer update --${{ matrix.dependency-version }} --no-interaction --prefer-dist --no-suggest
-
-    - name: PHPUnit Testing
-      run: vendor/bin/phpunit tests
+      - name: PHPUnit Testing
+        run: vendor/bin/phpunit tests
