--- a/composer.json
+++ b/composer.json
@@ -12,9 +12,9 @@
     ],
     "require": {
         "php": "^8.2",
-        "illuminate/support": "^10.0",
-        "illuminate/queue": "^10.0",
-        "illuminate/database": "^10.0"
+        "illuminate/support": "^10.0|^11.0",
+        "illuminate/queue": "^10.0|^11.0",
+        "illuminate/database": "^10.0|^11.0"
     },
     "require-dev": {
         "orchestra/testbench": "^8.0",
