--- a/composer.json
+++ b/composer.json
@@ -17,8 +17,8 @@
         "illuminate/database": "^10.0|^11.0"
     },
     "require-dev": {
-        "orchestra/testbench": "^8.0",
-        "phpunit/phpunit": "^9.5",
+        "orchestra/testbench": "^8.0|^9.0",
+        "phpunit/phpunit": "^9.5|^10.5",
         "spatie/test-time": "^1.2",
         "friendsofphp/php-cs-fixer": "^3.2"
     },
