--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -9,16 +9,12 @@ jobs:
     strategy:
       matrix:
         php: [8.2, 8.3]
-        laravel: [10.*, 11.*]
+        laravel: [11.*]
         dependency-version: [prefer-stable, prefer-lowest]
         include:
-          - laravel: 10.*
-            testbench: ^8.0
           - laravel: 11.*
             testbench: 9.*
-        exclude:
-          - laravel: 10.*
-            php: 8.0
+
 
     name: CI - PHP ${{ matrix.php }}  - Laravel ${{ matrix.laravel }} - Testbench ${{ matrix.testbench }} (${{ matrix.dependency-version }})
 
