--- a/composer.json
+++ b/composer.json
@@ -12,13 +12,13 @@
     ],
     "require": {
         "php": "^8.2",
-        "illuminate/support": "^11.0",
-        "illuminate/queue": "^11.0",
-        "illuminate/database": "^11.0"
+        "illuminate/support": "^11.0|^12.0",
+        "illuminate/queue": "^11.0|^12.0",
+        "illuminate/database": "^11.0|^12.0"
     },
     "require-dev": {
-        "orchestra/testbench": "^9.0",
-        "phpunit/phpunit": "^9.5|^10.5",
+        "orchestra/testbench": "^9.0|^10.0",
+        "phpunit/phpunit": "^9.5|^10.5|^11.5.3",
         "spatie/test-time": "^1.2",
         "friendsofphp/php-cs-fixer": "^3.2"
     },
