--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -1,6 +1,8 @@
 name: Continuous Integration
 
-on: ['push', 'pull_request']
+on:
+  - push
+  - pull_request
 
 jobs:
   ci:
@@ -9,30 +11,30 @@ jobs:
     strategy:
       matrix:
         php: [8.2, 8.3]
-        laravel: [11.*]
+        laravel: ['11.*', '12.*']
         dependency-version: [prefer-stable, prefer-lowest]
         include:
           - laravel: 11.*
             testbench: 9.*
-
+          - laravel: 12.*
+            testbench: 10.*
 
     name: CI - PHP ${{ matrix.php }}  - Laravel ${{ matrix.laravel }} - Testbench ${{ matrix.testbench }} (${{ matrix.dependency-version }})
 
     steps:
+      - name: Checkout
+        uses: actions/checkout@v2
 
-    - name: Checkout
-      uses: actions/checkout@v2
+      - name: Setup PHP
+        uses: shivammathur/setup-php@v2
+        with:
+          php-version: ${{ matrix.php }}
+          extensions: mbstring, zip
 
-    - name: Setup PHP
-      uses: shivammathur/setup-php@v2
-      with:
-        php-version: ${{ matrix.php }}
-        extensions: mbstring, zip
+      - name: Install Composer dependencies
+        run: |
+          composer require "laravel/framework:${{ matrix.laravel }}" "orchestra/testbench:${{ matrix.testbench }}" --no-interaction --no-update
+          composer update --${{ matrix.dependency-version }} --no-interaction --prefer-dist --no-suggest
 
-    - name: Install Composer dependencies
-      run: |
-        composer require "laravel/framework:${{ matrix.laravel }}" "orchestra/testbench:${{ matrix.testbench }}" --no-interaction --no-update
-        composer update --${{ matrix.dependency-version }} --no-interaction --prefer-dist --no-suggest
-
-    - name: PHPUnit Testing
-      run: vendor/bin/phpunit tests
+      - name: PHPUnit Testing
+        run: vendor/bin/phpunit tests
