Format code using laravel pint

--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
         "php": "^8.2",
         "illuminate/support": "^11.0|^12.0",
         "illuminate/queue": "^11.0|^12.0",
-        "illuminate/database": "^11.0|^12.0"
+        "illuminate/database": "^11.0|^12.0",
+        "laravel/pint": "dev-main"
     },
     "require-dev": {
         "orchestra/testbench": "^9.0|^10.0",
