--- a/composer.json
+++ b/composer.json
@@ -20,8 +20,7 @@
     "require-dev": {
         "orchestra/testbench": "^9.0|^10.0",
         "phpunit/phpunit": "^9.5|^10.5|^11.5.3",
-        "spatie/test-time": "^1.2",
-        "friendsofphp/php-cs-fixer": "^3.2"
+        "spatie/test-time": "^1.2"
     },
     "autoload": {
         "psr-4": {
